# peckis

./: .coveragerc  .dockerignore  .gitignore  .gitlab-ci.yml  Dockerfile  Dockerfile.serving  README.md  api.py  app.py  config.py  conftest.py  ml.py  pyproject.toml  run.sh  serving.sh  supervisord.conf  tasks.py  workers.py  workers.sh
models/: numbers.py  utils.py
tests/: test_api.py
utils/: preprocess.py
weights/: numbers.h5
