[tool.poetry]
name = "peckis"
version = "0.1.0"
description = "Peckis Doodler Backend"
authors = ["Matas Seimys <matas.seimys@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
flask = "^1.0"
keras = "^2.2"
tensorflow = "^1.13"
flask-cors = "^3.0"
Pillow = "^5.4"
pytest = "^4.3"
pytest-cov = "^2.6"
pytest-flask = "^0.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
